[package]
name = "cuke_runner_codegen"
version = "0.0.1"
authors = ["Michael Mitteregger <michael.mitteregger@gmx.at>"]
description = "Code generation via procedural macros (macros 1.1) for cuke-runner"
homepage = "https://github.com/mmitteregger/cuke-runner"
repository = "https://github.com/mmitteregger/cuke-runner"
readme = "../../README.md"
keywords = ["cucumber", "bdd", "testing", "gherkin"]
categories = ["development-tools::testing"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
cuke_runner_glue = { path = "../glue" }
syn = { version = "0.14", features = ["full"] }
quote = "0.6"
proc-macro2 = "0.4"
regex = "1"
log = "0.4"
devise = "0.1"

[dev-dependencies]
cuke_runner = { path = "../lib" }
