[package]
name = "cuke_runner_codegen"
version = "0.0.1"
authors = ["Michael Mitteregger <michael.mitteregger@gmx.at>"]
description = "Code generation via procedural macros (macros 1.1) for cuke-runner"
homepage = "https://github.com/mmitteregger/cuke-runner"
repository = "https://github.com/mmitteregger/cuke-runner"
readme = "../../README.md"
keywords = ["cucumber", "bdd", "testing", "gherkin"]
categories = ["development-tools::testing"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
cuke_runner_glue = { path = "../glue" }
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
regex = "1"
log = "0.4"
#devise = { git = "https://github.com/SergioBenitez/Devise.git", rev = "e58b3ac9afc3b6ff10a8aaf02a3e768a8f530089" }
devise = { git = "https://github.com/SergioBenitez/Devise.git", rev = "1e42a2691ef9934a446b8ed0ca1c4c8cf283f8bf" }

[dev-dependencies]
cuke_runner = { path = "../lib" }
